[project]
name = "news-crawler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "a129924", email = "a129924@gmail.com"},
]
dependencies = [
    "scrapy>=2.11.2",
    "pyppeteer>=2.0.0",
    "requests>=2.32.3",
    "pyquery>=2.0.0",
    "psycopg>=3.2.1",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
]
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]